# drone-bootcamp

./: .gitmodules  Dockerfile  README.md  docker-compose.debug.yml
example_1_goto-mode/: CMakeLists.txt  Dockerfile  README.md  app-patch.yml  auterion-app.yml
example_1_goto-mode/src/: goto_mode.cpp
example_2_libmav/: CMakeLists.txt  Dockerfile  README.md  app-patch.yml  auterion-app.yml
example_2_libmav/src/: libmav_mode.cpp
skeleton_1_cargo-mode/: CMakeLists.txt  Dockerfile  README.md  app-patch.yml  auterion-app.yml
skeleton_1_cargo-mode/src/: cargo_mode.cpp
skeleton_2_circle-mode/: CMakeLists.txt  Dockerfile  app-patch.yml  auterion-app.yml
skeleton_2_circle-mode/src/: circle_mode.cpp
skeleton_2b_circle-mode/: .clang-format  CMakeLists.txt  Dockerfile  README.md  app-patch.yml  auterion-app.yml
skeleton_2b_circle-mode/src/: circle_2b_mode.cpp
skeleton_3_precision-landing/: CMakeLists.txt  Dockerfile  README.md  app-patch.yml  app_updater.sh  auterion-app.yml  settings.default.env
skeleton_3_precision-landing/src/: precision_landing.cpp
